# video-analysis-extract

./: .cursorrules  .env.example  .gitignore  .gitleaks.toml  .golangci.yml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .stylelintignore  .stylelintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENVIRONMENT.md  Gemini 3 生态代码库深度治理与重构计划.md  LICENSE  README.md  Repo测试系统审计.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  biome.json  pyproject.toml  测试深度加强治理Plan.md
.agents/Plans/: 2026-03-15_06-07-57__repo-governance-final-form-execution-plan.md  2026-03-15_15-47-13__repo-governance-final-form-execution-plan.md  2026-03-15_17-52-28__repo-governance-final-form-execution-plan.md  2026-03-16_05-10-16__repo-four-track-final-form-hard-cut-plan.md  2026-03-16_08-53-09__repo-four-track-governance-final-form-execution-plan.md  2026-03-16_16-15-07__repo-four-track-governance-final-form-execution-plan.md  2026-03-17_01-54-18__repo-final-form-master-plan.md  2026-03-17_04-49-09__repo-ultimate-final-form-master-plan.md  2026-03-17_14-34-32__repo-final-form-execution-master-plan.md  2026-03-17_18-59-52__repo-verified-ultimate-master-plan.md  2026-03-17_19-00-34__repo-verified-final-form-master-plan.md  2026-03-18_16-41-47__repo-ultimate-verified-execution-master-plan.md  2026-03-18_20-19-29__repo-ultimate-single-path-execution-plan.md  2026-03-18_23-11-47__repo-validated-ultimate-master-plan.md  2026-03-19_16-40-19__repo-ultimate-single-path-final-form-plan.md
.codex/: Progress.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _preflight-fast-steps.yml  _trusted-pr-boundary.yml  build-ci-standard-image.yml  ci.yml  contract-diff.yml  env-governance.yml  monthly-governance-audit.yml  mutation-weekly.yml  pre-commit.yml  release-evidence-attest.yml  remote-integrity-audit.yml  runner-health.yml  vendor-governance.yml
.opencode/: global-blueprint-container-first-ci-mixed-mode.md
apps/: __init__.py
apps/api/: AGENTS.md  CLAUDE.md  README.md
apps/api/app/: db.py  (+4 more)
apps/mcp/: AGENTS.md  CLAUDE.md  README.md  __init__.py  server.py
apps/web/: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  next-env.d.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.mts  vitest.config.ts  vitest.setup.ts
apps/worker/: AGENTS.md  CLAUDE.md  README.md
artifacts/: README.md
artifacts/licenses/: third-party-license-inventory.json
artifacts/performance/: cwv-budget.json  rum-baseline.json  rum-observations.json
artifacts/releases/: README.md
config/docs/: boundary-policy.json  change-contract.json  nav-registry.json  render-manifest.json
config/governance/: active-upstreams.json  bridges.json  current-proof-contract.json  dependency-boundaries.json  evidence-contract.json  external-lane-contract.json  logging-contract.json  module-ownership.json  public-entrypoints.json  public-surface-policy.json  root-allowlist.json  root-denylist.json  root-layout-budget.json  root-runtime-policy.json  runtime-outputs.json  upstream-compat-matrix.json  upstream-registry.json  upstream-templates.json
config/source-names/: README.md  subscriptions.up_names.json
contracts/: CLAUDE.md
contracts/source/: openapi.yaml
data/: rsshub_probe_49_embed0.tsv  rsshub_probe_49_latest.summary.json  rsshub_probe_49_latest.tsv  rsshub_probe_49_post_tuning.summary.json  rsshub_probe_49_retry.summary.json  rsshub_probe_49_retry.tsv  subscriptions.up_names.json
docs/: Gemini 3 生态代码库深度治理与重构计划.md  Repo_Next_Step_Plan.md  Repo完善与证据链报告.md  Repo测试系统审计.md  architecture.md  index.md  init_local_services.md  phase1-2-architecture.md  phase3-architecture.md  runbook-local.md  start-here.md  state-machine.md  testing-governance-baseline.md  testing-slo.md  testing.md
docs/deploy/: full-stack-gce.md  miniflux-nextflux-gce.md  rollback-runbook.md
docs/governance/: final-form.md
docs/plans/: 2026-03-10-container-first-ci-mixed-mode.md
docs/proofs/: task-result-proof-pack.md
docs/reference/: ai-evaluation.md  architecture-governance.md  cache.md  contributor-rights-model.md  dependency-governance.md  done-model.md  env-script-overrides.md  evidence-model.md  external-lane-status.md  logging.md  mcp-tool-routing.md  newcomer-receipt.md  newcomer-result-proof.md  project-positioning.md  public-artifact-exposure.md  public-brand-boundary.md  public-privacy-and-data-boundary.md  public-repo-readiness.md  public-rights-and-provenance.md  root-governance.md  runner-baseline.md  runtime-cache-retention.md  upstream-compatibility-policy.md  upstream-governance.md  value-proof.md
docs/skills/: 01-code-quality-engineering.md
env/: core.env.example
evals/: README.md  baseline.json  golden-set.sample.jsonl  rubric.md
integrations/: README.md
scripts/: api_real_smoke_local.sh  apply_github_runner_startup_metadata.sh  audit_env_contract_usage.py  audit_github_runner_host.sh  bootstrap_full_stack.sh  bootstrap_strict_ci_runtime.sh  build_ci_standard_image.sh  build_nightly_flaky_report.py  build_release_readiness_report.py  check_ci_docs_parity.py  check_ci_smoke_drift.sh  check_ci_workflow_strictness.py  check_contract_diff.py  check_design_tokens.py  check_docs_governance.py  check_e2e_strictness.py  check_env_budget.py  check_env_contract.py  check_iac_entrypoint.sh  check_mutation_test_selection.py  check_runner_baseline.py  check_structured_logs.py  check_test_assertions.py  check_test_focus_markers.py  check_web_button_coverage.py  check_web_coverage_threshold.py  check_worker_line_limits.py  ci_api_real_smoke.sh  ci_autofix.py  ci_contract.py  ci_live_smoke.sh  ci_or_local_gate_doc_drift.sh  ci_pr_llm_real_smoke.sh  ci_python_tests.sh  ci_web_e2e.sh  ci_web_test_build.sh  collect_ci_kpi.py  configure_rsshub.sh  deploy_core_services.sh  deploy_reader_stack.sh  (+32 more)
(+577 files in other folders)
