[project]
name = "video-analysis-phase3"
version = "0.1.0"
description = "Phase3 local-first video analysis stack (API + Worker + MCP)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.116.0,<1",
  "google-genai>=1.33.0,<2",
  "httpx>=0.28.1,<1",
  "markdown>=3.8.2,<4",
  "mcp>=1.13.1,<2",
  "psycopg[binary]>=3.2.10,<4",
  "pydantic>=2.11.7,<3",
  "sqlalchemy>=2.0.43,<3",
  "temporalio>=1.17.0,<2",
  "tzdata>=2025.2",
  "uvicorn>=0.35.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1,<9",
  "pytest-xdist>=3.8.0,<4",
]
e2e = [
  "playwright>=1.55.0,<2",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "apps/worker",
]
